<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_my_greenhouses"
            android:icon="@drawable/ic_house"
            android:title="@string/menu_my_greenhouses" />
        <item
            android:id="@+id/nav_greenhouse_data"
            android:icon="@drawable/ic_data"
            android:title="@string/menu_greenhouse_data" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>