<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client_ui.ui.change_password.ChangePasswordFragment">

    <!-- Old Password Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:padding="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- New Password Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewOldPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:padding="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Confirm New Password Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewConfirmNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_new_password"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password_again"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:padding="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Change Password Button -->
    <Button
        android:id="@+id/buttonSubmitChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/submit"
        android:backgroundTint="@color/dark_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewConfirmNewPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
